# cri-probe

./: .gitignore  README.md  setup.cfg
cri-probe/: autodetect.py
criprobe/: __init__.py  autodetect.py  cri.py
criprobe/tests/: test_cri.py
