[metadata]
name = criprobe
version = 0.0.1
author = CRI Probe Authors
author_email = author@example.com
description = Support for Colorimetry Research remote communications v1.36
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sabarish-srinivasan/cri-probe
project_urls =
    Bug Tracker = https://github.com/sabarish-srinivasan/cri-probe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
# package_dir is git root
package_dir =
packages = criprobe
python_requires = >=3.9

[options.packages.find]
where = criprobe